# cryptonite

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml
api/: RequestType.h
api/binance/: CMakeLists.txt
api/binance/include/enums/: Converter.h  Enums.h
api/binance/include/rest-api/: APIEndpoints.h  BinanceAPI.h  GeneralData.h  MarketData.h  MarketDataParser.h  TradingData.h
api/binance/src/enums/: Converter.cpp
api/binance/src/errors/: Converter.cpp
api/binance/src/rest-api/: BinanceAPI.cpp  GeneralDataParser.cpp  MarketDataParser.cpp
exchange/binance/: CMakeLists.txt
exchange/binance/converters/: EnumConverter.h  ErrorConverter.cpp  ErrorConverter.h  FilterConverter.cpp  FilterConverter.h
exchange/binance/data/: APIEndpoints.h  CMakeLists.txt  Enums.h  Errors.h  GeneralData.h  MarketData.h  TradingData.h
exchange/binance/http/: BinanceAPI.cpp  BinanceAPI.h  BinanceHttpClient.cpp  BinanceHttpClient.h
exchange/binance/include/rest-api/: GeneralDataParser.h  MarketData.h
exchange/binance/parsers/: EnumConverter.cpp  EnumParser.cpp  GeneralDataParser.cpp  GeneralDataParser.h  MarketDataParser.cpp  MarketDataParser.h
exchange/binance/repositories/: BinanceGeneralDataRepository.cpp  BinanceGeneralDataRepository.h  BinanceMarketDataRepository.cpp  BinanceMarketDataRepository.h
exchange/binance/src/errors/: Converter.cpp
exchange/binance/src/filters/: Converter.cpp
exchange/binance/src/rest-api/: GeneralDataParser.cpp
models/: CMakeLists.txt
models/include/: SymbolsModel.h
models/src/: SymbolsModel.cpp
presentation/models/: CMakeLists.txt  SymbolsModel.cpp  SymbolsModel.h
source/: .gitignore  CMakeLists.txt  icon.rc  launch.json  main.cpp
source/api/: CMakeLists.txt
source/api/binance/: APIEndpoints.h  CMakeLists.txt  EnumConverter.cpp  EnumConverter.h  ErrorConverter.cpp  ErrorConverter.h  Errors.h  FilterConverter.cpp  FilterConverter.h  Filters.h  enums.h
source/api/binance/include/: APIEndpoints.h  BinanceAPI.h  EnumConverter.h  Enums.h  ErrorConverter.h  FilterConverter.h  Filters.h  GeneralData.h  GeneralDataParser.h
source/api/binance/include/enums/: EnumConverter.h  Enums.h
source/api/binance/include/errors/: ErrorConverter.h
source/api/binance/include/filters/: Filters.h  TypeConverter.h
source/api/binance/include/rest-api/: APIEndpoints.h  BinanceAPI.h  GeneralData.h
source/api/binance/src/: BinanceAPI.cpp  EnumConverter.cpp  FilterConverter.cpp  GeneralDataParser.cpp
source/api/binance/src/enums/: Converter.cpp  EnumConverter.cpp
source/api/binance/src/errors/: ErrorConverter.cpp
source/api/binance/src/filters/: Converter.cpp  FilterConverter.cpp  TypeConverter.cpp
source/api/binance/src/rest-api/: BinanceAPI.cpp  GeneralDataParser.cpp
source/tests/: CMakeLists.txt
source/tests/api/binance/: BinanceAPITest.cpp  CMakeLists.txt  GeneralDataParserTest.cpp  TestBinanceAPI.cpp
tests/: CMakeLists.txt
tests/api/binance/: CMakeLists.txt  GeneralDataParserTest.cpp  MarketDataParserTest.cpp
tests/exchange/binance/: ApiHelper.h  CMakeLists.txt  GeneralDataParserTest.cpp  MarketDataParserTest.cpp
